@@ -5,6 +5,7 @@ import com.fu.pha.entity.Category;
 import com.fu.pha.entity.ImportItem;
 import com.fu.pha.entity.Product;
 import com.fu.pha.enums.Status;
+import com.fu.pha.exception.Message;
 import com.fu.pha.exception.ResourceNotFoundException;
 import com.fu.pha.repository.ImportItemRepository;
 import com.fu.pha.repository.ProductRepository;
@@ -32,142 +33,127 @@ import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
 public class ProductViewListTest {
+
     @Mock
     private ProductRepository productRepository;
 
     @InjectMocks
     private ProductServiceImpl productService;
 
-    private Product productMock;
-
+    private Pageable pageable;
     @BeforeEach
     public void setUp() {
-        MockitoAnnotations.openMocks(this);
-
-        Category categoryMock = new Category();
-        categoryMock.setId(1L);
-        categoryMock.setCategoryName("Category A");
-
-        productMock = new Product();
-        productMock.setId(1L);
-        productMock.setProductName("Product A");
-        productMock.setTotalQuantity(10);
-        productMock.setStatus(Status.ACTIVE);
-        productMock.setCategoryId(categoryMock); // Set the Category object
-        productMock.setProductUnitList(Collections.emptyList()); // Initialize the productUnitList
-        // Set other fields as needed
+        pageable = PageRequest.of(0, 10);
     }
 
+    //Test case: Found products with valid search criteria
     @Test
-    public void testGetListProductForSaleOrderPaging_FoundProducts() {
-        PageRequest pageRequest = PageRequest.of(0, 10);
-        List<ProductDTOResponse> productList = Arrays.asList(new ProductDTOResponse(productMock));
-        Page<ProductDTOResponse> productPage = new PageImpl<>(productList, pageRequest, productList.size());
+    public void UTCPL01() {
+        // Arrange
+        ProductDTOResponse productDto = new ProductDTOResponse();
+        productDto.setProductName("Thuốc Ho Bảo Thanh");
+        Page<ProductDTOResponse> expectedPage = new PageImpl<>(List.of(productDto));
+        when(productRepository.getListProductPaging("Thuốc Ho Bảo Thanh", "Thuốc Ho", Status.ACTIVE, pageable)).thenReturn(expectedPage);
 
-        when(productRepository.getListProductPaging(anyString(), anyString(), any(Status.class), eq(pageRequest)))
-                .thenReturn(productPage);
+        // Act
+        Page<ProductDTOResponse> result = productService.getAllProductPaging(0, 10, "Thuốc Ho Bảo Thanh", "Thuốc Ho", "ACTIVE");
 
-        Page<ProductDTOResponse> result = productService.getAllProductPaging(0, 10, "Product A", "Category A", "ACTIVE");
-
+        // Assert
         assertNotNull(result);
+        assertFalse(result.isEmpty());
         assertEquals(1, result.getTotalElements());
-        verify(productRepository, times(1)).getListProductPaging(anyString(), anyString(), any(Status.class), eq(pageRequest));
+        verify(productRepository).getListProductPaging("Thuốc Ho Bảo Thanh", "Thuốc Ho", Status.ACTIVE, pageable);
     }
 
+    //Test case: No products found
     @Test
-    public void testGetListProductForSaleOrderPaging_ProductNameIsNull() {
-        PageRequest pageRequest = PageRequest.of(0, 10);
-        List<ProductDTOResponse> productList = Arrays.asList(new ProductDTOResponse(productMock));
-        Page<ProductDTOResponse> productPage = new PageImpl<>(productList, pageRequest, productList.size());
+    public void UTCPL02() {
+        // Arrange
+        when(productRepository.getListProductPaging("bột hapacol", "Thuốc Giảm Đau", Status.ACTIVE, pageable)).thenReturn(Page.empty());
 
-        when(productRepository.getListProductPaging(isNull(), anyString(), any(Status.class), eq(pageRequest)))
-                .thenReturn(productPage);
+        // Act & Assert
+        ResourceNotFoundException exception = assertThrows(ResourceNotFoundException.class, () ->
+                productService.getAllProductPaging(0, 10, "bột hapacol", "Thuốc Giảm Đau", "ACTIVE"));
+        assertEquals(Message.PRODUCT_NOT_FOUND, exception.getMessage());
+        verify(productRepository).getListProductPaging("bột hapacol", "Thuốc Giảm Đau", Status.ACTIVE, pageable);
+    }
 
-        Page<ProductDTOResponse> result = productService.getAllProductPaging(0, 10, null, "Category A", "ACTIVE");
+    //Test case: Get all products by paging with invalid status
+    @Test
+    public void UTCPL03() {
+        // Act & Assert
+        ResourceNotFoundException exception = assertThrows(ResourceNotFoundException.class, () ->
+                productService.getAllProductPaging(0, 10, "Thuốc Ho Bảo Thanh", "Thuốc Ho", "INVALID_STATUS"));
+        assertEquals(Message.STATUS_NOT_FOUND, exception.getMessage());
+    }
 
+    //Test case: Get all products by paging with status is null
+    @Test
+    public void UTCPL04() {
+        // Arrange
+        ProductDTOResponse productDto = new ProductDTOResponse();
+        productDto.setProductName("Product A");
+        Page<ProductDTOResponse> expectedPage = new PageImpl<>(List.of(productDto));
+        when(productRepository.getListProductPaging("Thuốc Ho Bảo Thanh", "Thuốc Ho", null, pageable)).thenReturn(expectedPage);
+
+        // Act
+        Page<ProductDTOResponse> result = productService.getAllProductPaging(0, 10, "Thuốc Ho Bảo Thanh", "Thuốc Ho", null);
+
+        // Assert
         assertNotNull(result);
+        assertFalse(result.isEmpty());
         assertEquals(1, result.getTotalElements());
-        verify(productRepository, times(1)).getListProductPaging(isNull(), anyString(), any(Status.class), eq(pageRequest));
+        verify(productRepository).getListProductPaging("Thuốc Ho Bảo Thanh", "Thuốc Ho", null, pageable);
     }
 
+    //Test case: Get all products by paging with category is null
     @Test
-    public void testGetListProductForSaleOrderPaging_ZeroTotalQuantity() {
-        productMock.setTotalQuantity(0);
-        PageRequest pageRequest = PageRequest.of(0, 10);
-        List<ProductDTOResponse> productList = Arrays.asList(new ProductDTOResponse(productMock));
-        Page<ProductDTOResponse> productPage = new PageImpl<>(productList, pageRequest, productList.size());
+    public void UTCPL05() {
+        // Arrange
+        ProductDTOResponse productDto = new ProductDTOResponse();
+        productDto.setProductName("Thuốc Ho Bảo Thanh");
+        Page<ProductDTOResponse> expectedPage = new PageImpl<>(List.of(productDto));
+        when(productRepository.getListProductPaging("Thuốc Ho Bảo Thanh", null, Status.ACTIVE, pageable)).thenReturn(expectedPage);
 
-        when(productRepository.getListProductPaging(anyString(), anyString(), any(Status.class), eq(pageRequest)))
-                .thenReturn(productPage);
+        // Act
+        Page<ProductDTOResponse> result = productService.getAllProductPaging(0, 10, "Thuốc Ho Bảo Thanh", null, "ACTIVE");
 
-        Page<ProductDTOResponse> result = productService.getAllProductPaging(0, 10, "Product A", "Category A", "ACTIVE");
-
+        // Assert
         assertNotNull(result);
+        assertFalse(result.isEmpty());
         assertEquals(1, result.getTotalElements());
-        assertEquals(0, result.getContent().get(0).getTotalQuantity());
-        verify(productRepository, times(1)).getListProductPaging(anyString(), anyString(), any(Status.class), eq(pageRequest));
+        verify(productRepository).getListProductPaging("Thuốc Ho Bảo Thanh", null, Status.ACTIVE, pageable);
     }
 
-    // Test case: No products found
     @Test
-    public void testGetListProductForSaleOrderPaging_NoProductsFound() {
+    public void UTCPL06() {
         // Arrange
-        Pageable pageable = PageRequest.of(0, 10);
-        String productName = "NonExistentProduct";
-        Boolean isPrescription = false;
-
-        when(productRepository.getListProductForSaleOrderPaging(productName, isPrescription,pageable)).thenReturn(Page.empty());
+        when(productRepository.getListProductPaging("Thuốc Ho Bảo Thanh", "Invalid_Category", Status.ACTIVE, pageable)).thenReturn(Page.empty());
 
         // Act & Assert
-        assertThrows(ResourceNotFoundException.class, () -> {
-            productService.getListProductForSaleOrderPaging(0, 10, productName, isPrescription);
-        });
+        ResourceNotFoundException exception = assertThrows(ResourceNotFoundException.class, () ->
+                productService.getAllProductPaging(0, 10, "Thuốc Ho Bảo Thanh", "Invalid_Category", "ACTIVE"));
+        assertEquals(Message.PRODUCT_NOT_FOUND, exception.getMessage());
+        verify(productRepository).getListProductPaging("Thuốc Ho Bảo Thanh", "Invalid_Category", Status.ACTIVE, pageable);
     }
 
-    // Test case: Invalid page size (less than 1)
     @Test
-    public void testGetListProductForSaleOrderPaging_InvalidPageSize() {
+    public void UTCPL07() {
         // Arrange
-        int invalidSize = 0; // size không hợp lệ
-        int page = 0;
-        String productName = "Product1";
-        Boolean isPrescription = false;
+        ProductDTOResponse productDto = new ProductDTOResponse();
+        productDto.setProductName(null);
+        Page<ProductDTOResponse> expectedPage = new PageImpl<>(List.of(productDto));
+        when(productRepository.getListProductPaging(null, "Thuốc Ho", Status.ACTIVE, pageable)).thenReturn(expectedPage);
 
-        // Act & Assert
-        assertThrows(IllegalArgumentException.class, () -> {
-            productService.getListProductForSaleOrderPaging(page, invalidSize, productName, isPrescription);
-        });
+        // Act
+        Page<ProductDTOResponse> result = productService.getAllProductPaging(0, 10, null, "Thuốc Ho", "ACTIVE");
+
+        // Assert
+        assertNotNull(result);
+        assertFalse(result.isEmpty());
+        assertEquals(1, result.getTotalElements());
+        verify(productRepository).getListProductPaging(null, "Thuốc Ho", Status.ACTIVE, pageable);
     }
 
-    // Test case: Invalid page number (negative)
-    @Test
-    public void testGetListProductForSaleOrderPaging_InvalidPageNumber() {
-        // Arrange
-        int invalidPage = -1; // page không hợp lệ
-        int size = 10;
-        String productName = "Product1";
-        Boolean isPrescription = false;
 
-        // Act & Assert
-        assertThrows(IllegalArgumentException.class, () -> {
-            productService.getListProductForSaleOrderPaging(invalidPage, size, productName, isPrescription);
-        });
-    }
-
-    // Test case: Exception in repository (if any)
-    @Test
-    public void testGetListProductForSaleOrderPaging_RepositoryException() {
-        // Arrange
-        Pageable pageable = PageRequest.of(0, 10);
-        String productName = "Product1";
-        Boolean isPrescription = false;
-
-        when(productRepository.getListProductForSaleOrderPaging(productName,isPrescription ,pageable))
-                .thenThrow(new RuntimeException("Database error"));
-
-        // Act & Assert
-        assertThrows(RuntimeException.class, () -> {
-            productService.getListProductForSaleOrderPaging(0, 10, productName, isPrescription);
-        });
-    }
 }
